k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hero-svc
spec:
  type: ClusterIP
  selector:
    app: hero-app
  ports:
    - name: grpc-hero
      port: 50051
