k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hero-vs
spec:
  gateways:
    - default/hero-gateway
  hosts:
    - '*'
  http:
    - route:
        - destination:
            host: hero-svc
            port:
              number: 50051
